k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: product-service
  namespace: retailtech
  labels:
    app: product-service
spec:
  selector:
    app: product-service
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
